--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,63 @@
-fastapi==0.110.0
-uvicorn==0.27.1
+# FastAPI and Server
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
 
-# MongoDB (NoSQL)
-pymongo==4.6.1
+# MongoDB
 motor==3.3.2
+pymongo==4.6.0
+beanie==1.23.6
 
 # Authentication & Security
-python-jose==3.3.0
+python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.9
+python-dotenv==1.0.0
+bcrypt==4.1.1
+
+# WebSocket Support
+websockets==12.0
 
 # QR Code Generation
 qrcode[pil]==7.4.2
-Pillow==9.5.0
+Pillow==10.1.0
 
-# External API Requests
-requests==2.31.0
-python-dotenv==1.0.1
-
-# Location & Distance Handling
+# Geospatial & Distance Calculation
 geopy==2.4.1
+haversine==2.8.1
 
-# Date & Time Handling
-pytz==2024.1
+# Weather API (OpenWeatherMap)
+pyowm==3.3.0
 
-# Email / Notifications (Optional but Included)
-fastapi-mail==1.4.1
+# Notifications
+twilio==8.10.0
+sendgrid==6.11.0
+firebase-admin==6.3.0
 
-# PDF Reports (Optional)
-reportlab==4.1.0
+# Background Tasks
+celery==5.3.4
+redis==5.0.1
+
+# Utilities
+pydantic==2.5.0
+pydantic-settings==2.1.0
+email-validator==2.1.0
+phonenumbers==8.13.26
+
+# Date & Time
+python-dateutil==2.8.2
+pytz==2023.3
+
+# HTTP Requests
+httpx==0.25.2
+aiohttp==3.9.1
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
+
+# CORS
+fastapi-cors==0.0.6
+
+# Monitoring
+prometheus-fastapi-instrumentator==6.1.0
