--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,7 @@
     "react-i18next": "^13.5.0",
     "framer-motion": "^10.16.16",
     "react-toastify": "^9.1.3",
-    "date-fns": "^2.30.0"
-  },
-  "devDependencies": {
+    "date-fns": "^2.30.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
